test/valid/fc36994_TestOperators/TestMinus.plume
/**
 * Tests the - operator
 * @author 36994, César Santos
 */
class TestMinus extends Object is
  method main : () -> String is //expected : -1
    (6 - 7).toString()