test/invalid/MissingOverride/MissingOverride.plume
/**
 * Missing override
 * @author 36994, César Santos
 */
class MissingOverride extends Object is
  method toString : () -> String is
    "test"